[package]
name = "token"
version = "0.2.0"
edition = "2024"

[dependencies]
rand = "0.9.2"

[profile.release]
opt-level = 3
lto = true
panic = 'abort'
strip = true      # удаляет символы отладки
codegen-units = 1

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
